# claude-usage-bar

./: .gitignore  Makefile  Package.swift  README.md  appcast.xml  pyproject.toml
Sources/ClaudeUsageBar/: App.swift  AppSettings.swift  ChartView.swift  MenuView.swift  Models.swift  SettingsView.swift  UsageMonitor.swift  UsageReader.swift
assets/: AppIcon.icns
claude_usage_bar/: __init__.py  __main__.py  app.py  reader.py
