[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "claude-usagage-bar"
version = "0.1.0"
description = "Mac status bar app showing today's Claude Code token usage"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Chris Rouse", email = "chris@chrisrouse.us" }]
requires-python = ">=3.9"
dependencies = ["rumps>=0.4.0"]
keywords = ["claude", "anthropic", "menubar", "macos", "status-bar"]
classifiers = [
    "Environment :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.scripts]
claude-usage-bar = "claude_usage_bar.__main__:main"

[project.urls]
Homepage = "https://github.com/chrisrouse/claude-usagage-bar"
Issues = "https://github.com/chrisrouse/claude-usagage-bar/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_usage_bar*"]
